--- a/Teaching.qmd
+++ b/Teaching.qmd
@@ -9,28 +9,28 @@ Research plays a central role in my teaching as students improve their analytica
 
 [*Graduate Teaching Assistant*]{.underline}
 
-**The Pennsylvania State University Department of Geography** *(2023)*
+-   **The Pennsylvania State University Department of Geography** *(2023)*
 
 GEOG 464: Advanced Spatial Analysis
 
-**The Pennsylvania State University Department of Geography** *(2023)*
+-   **The Pennsylvania State University Department of Geography** *(2023)*
 
 GEOG 361: Cartography
 
-**The Pennsylvania State University Department of Geography** *(2022)*
+-   **The Pennsylvania State University Department of Geography** *(2022)*
 
 GEOG 364: Spatial Analysis
 
 [*Undergraduate Teaching Assistant*]{.underline}
 
-**The Pennsylvania State University College of Earth and Mineral Sciences** *(2021)*
+-   **The Pennsylvania State University College of Earth and Mineral Sciences** *(2021)*
 
 EMSC 100S: What is Sustainability?
 
-**The Pennsylvania State University Department of Geography (2020) and** *(2021)*
+-   **The Pennsylvania State University Department of Geography (2020) and** *(2021)*
 
 GEOG 301: Thinking Geographically
 
-**The Pennsylvania State University Department of Geography (***2020)*
+-   **The Pennsylvania State University Department of Geography (***2020)*
 
 GEOG 364: Spatial Analysis
