--- a/projects.qmd
+++ b/projects.qmd
@@ -1,5 +1,4 @@
 ---
-title: "Research"
 editor: visual
 ---
 
@@ -9,21 +8,21 @@ editor: visual
 
     [![](images/Poster%20image.png){width="48"}](https://github.com/harmansingh1412/HarmanSingh_profile/blob/main/research%20posters/Pluvial%20Floods%20Systematic%20Review.pdf)
 
-    Harman Singh, [Miriam Nielsen](https://eesc.columbia.edu/content/miriam-nielsen), and Dr. [Helen Greatrex](https://www.geog.psu.edu/directory/helen-greatrex)
+    -Harman Singh, [Miriam Nielsen](https://eesc.columbia.edu/content/miriam-nielsen), and Dr. [Helen Greatrex](https://www.geog.psu.edu/directory/helen-greatrex)
 
 -   **News Media Coverage of India's National River Linking Program (2004-2022): A Case Study of the Ken-Betwa Link using Topic Modeling**
 
     [![](images/Poster%20image.png){width="48"}](https://github.com/harmansingh1412/HarmanSingh_profile/blob/main/research%20posters/INRLP%20poster.pdf)
 
-    Harman Singh, Matthew Hansen, and Dr. [Trevor Birkenholtz](https://www.geog.psu.edu/directory/trevor-birkenholtz)
+    -Harman Singh, Matthew Hansen, and Dr. [Trevor Birkenholtz](https://www.geog.psu.edu/directory/trevor-birkenholtz)
 
 -   **Digital Newspaper Data Retrieval and Cleaning for Qualitative Analysis**
 
-    Harman Singh, Matthew Hansen, and Trevor Birkenholtz
+    -Harman Singh, Matthew Hansen, and Trevor Birkenholtz
 
 -   **COVID-19 & Climate Change: Methods for Mapping the Effects of a Compounding Crisis in the Coastal Zone**
 
-    Dr. [Sweta Baniya](https://liberalarts.vt.edu/departments-and-schools/department-of-english/faculty/sweta-baniya.html), Dr. [Andrew Katz](https://enge.vt.edu/People/researchfaculty/andrewkatz.html), Maggie Webb, Harman Singh, and Rachel Inman
+    -Dr. [Sweta Baniya](https://liberalarts.vt.edu/departments-and-schools/department-of-english/faculty/sweta-baniya.html), Dr. [Andrew Katz](https://enge.vt.edu/People/researchfaculty/andrewkatz.html), Maggie Webb, Harman Singh, and Rachel Inman
 
 [*Undergraduate*]{.underline}
 
@@ -31,4 +30,4 @@ editor: visual
 
     [![](images/Poster%20image.png){width="48"}](https://github.com/harmansingh1412/HarmanSingh_profile/blob/main/research%20posters/Kerala%20floods.pdf)
 
-    Harman Singh, Trevor Birkenholtz, and Helen Greatrex
+    -Harman Singh, Trevor Birkenholtz, and Helen Greatrex
