--- a/Personal Interests.qmd
+++ b/Personal Interests.qmd
@@ -32,7 +32,7 @@ and a few recent pictures...
 
 ![](images/pic%203.jpg){fig-align="center" width="311"}
 
-**Pictures 1 & 2:** [The Garden of the Gods](https://gardenofgods.com/) Visitor & Nature Center
+**Pictures 1 & 2:** [The Garden of the Gods](https://gardenofgods.com/) Visitor & Nature Center, Colorado Springs, CO
 
 ![](images/pic%202.jpg){fig-align="center" width="373"}
 
