--- a/index.qmd
+++ b/index.qmd
@@ -10,9 +10,8 @@ about:
     - icon: github
       text: Github
       href: https://github.com/harmansingh1412
-    - icon: email
-      text: Email
-      href: harmansingh1412@gmail.com
+    - text: Email
+      href: mailto:harmansingh1412@gmail.com
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/harman-singh-a4b5aa138/
