--- a/Teaching.qmd
+++ b/Teaching.qmd
@@ -26,10 +26,10 @@ GEOG 364: Spatial Analysis
 
 EMSC 100S: What is Sustainability?
 
--   **The Pennsylvania State University Department of Geography (2020) and** *(2021)*
+-   **The Pennsylvania State University Department of Geography** *(2020 & 2021)*
 
 GEOG 301: Thinking Geographically
 
--   **The Pennsylvania State University Department of Geography (***2020)*
+-   **The Pennsylvania State University Department of Geography** *(2020)*
 
 GEOG 364: Spatial Analysis
